saving final project work

--- a/Lessons/18_CraftingReports.Rmd
+++ b/Lessons/18_CraftingReports.Rmd
@@ -24,13 +24,19 @@ editor_options:
     + Can be named {r name} to facilitate navigation and autoreferencing
     + Chunk options allow for flexibility when the code runs and when the document is knitted
 3. **Text** with formatting options for readability in knitted document
+command alt i
+```{r}
+
+```
 
 A handy cheat sheet for R markdown can be found [here](https://www.rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf). Another one can be found [here](https://www.rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf).
 
 ## WHY R MARKDOWN?
 
 <Fill in our discussion below with bullet points. Use italics and bold for emphasis (hint: use the cheat sheets to figure out how to make bold and italic text).>
-
+* *italic*
+* **bold**
+* 
 ## TEXT EDITING CHALLENGE
 
 Create a table below that details the example datasets we have been using in class. The first column should contain the names of the datasets and the second column should include some relevant information about the datasets. (Hint: use the cheat sheets to figure out how to make a table in Rmd)
@@ -39,12 +45,36 @@ Create a table below that details the example datasets we have been using in cla
 ## R CHUNK EDITING CHALLENGE
 ### Installing packages
 Create an R chunk below that installs the package `knitr`. Instead of commenting out the code, customize the chunk options such that the code is not evaluated (i.e., not run). 
+```{r, eval=FALSE, include=FALSE}
+#install.packages("knitr")
+library(knitr)
+
+```
 
 
 ### Setup
 Create an R chunk below called "setup" that checks your working directory, loads the packages `tidyverse` and `knitr`, and sets a ggplot theme. Remember that you need to disable R throwing a message, which containts a check mark that cannot be knitted.
+```{r, message = FALSE}
+#setup
+getwd()
+library(tidyverse)
+library(knitr)
+
+# Set theme
+mytheme <- theme_classic() +
+  theme(axis.text = element_text(color = "black"), 
+        legend.position = "top")
+theme_set(mytheme)
+
+```
 
 Load the NTL-LTER_Lake_Nutrients_Raw dataset, display the head of the dataset, and set the date column to a date format.
+```{r, message = FALSE}
+LTER_Lake_Nutrients <- read.csv("./Data/Raw/NTL-LTER_Lake_Nutrients_Raw.csv")
+LTER_Lake_Nutrients$sampledate <- as.Date(LTER_Lake_Nutrients$sampledate, format = "%m-%d-%Y")
+
+
+```
 
 Customize the chunk options such that the code is run but is not displayed in the final document.
 
@@ -54,21 +84,69 @@ Create an R chunk below to create a processed dataset do the following operation
 
 * Include all columns except lakeid, depth_id, and comments
 * Include only surface samples (depth = 0 m)
+```{r, include=FALSE}
+Lake <- 
+  LTER_Lake_Nutrients %>%
+  select(lakename:sampledate, depth:po4) %>%
+  filter(depth==0) %>%
+
+Nutrients_summary.tp <- LTER_Lake_Nutrients %>%
+   group_by(lakename) %>%
+  summarise(mean.tp_ug = mean(tp_ug, na.rm = TRUE),
+            minimum.tp_ug = min(tp_ug, na.rm = TRUE),
+            maximum.tp_ug = max(tp_ug, na.rm = TRUE),
+            Standard.dev.tp_ug = sd(tp_ug, na.rm = TRUE))
+
+Nutrients_summary.tp <- LTER_Lake_Nutrients %>%
+   group_by(lakename) %>%
+  summarise(mean.tp_ug = mean(tp_ug, na.rm = TRUE),
+            minimum.tp_ug = min(tp_ug, na.rm = TRUE),
+            maximum.tp_ug = max(tp_ug, na.rm = TRUE),
+            Standard.dev.tp_ug = sd(tp_ug, na.rm = TRUE))
+
+```
 
 
 Create a second R chunk to create a summary dataset with the mean, minimum, maximum, and standard deviation of total nitrogen concentrations for each lake. Create a second summary dataset that is identical except that it evaluates total phosphorus. Customize the chunk options such that the code is run but not displayed in the final document. 
+```{r}
+kable(Nutrients_summary.tn, caption = "Total Nitrogen conentrations per Lake")
+kable(Nutrients_summary.tp, caption = "Total Phosporous conentrations per Lake")
+```
 
 
 Create a third R chunk that uses the function `kable` in the knitr package to display two tables: one for the summary dataframe for total N and one for the summary dataframe of total P. Use the `caption = " "` code within that function to title your tables. Customize the chunk options such that the final table is displayed but not the code used to generate the table. 
+```{r}
+kable(Lake$tn_ug, Lake$tp_ug)
+```
 
 
 Create a fourth and fifth R chunk that generates two plots (one in each chunk): one for total N over time with different colors for each lake, and one with the same setup but for total P. Decide which geom option will be appropriate for your purpose, and select a color palette that is visually pleasing and accessible. Customize the chunk options such that the final figures are displayed but not the code used to generate the figures. In addition, customize the chunk options such that the figures are aligned on the left side of the page. Lastly, add a fig.cap chunk option to add a caption (title) to your plot that will display underneath the figure.
+```{r, include=FALSE, fig.height = 4, fig.width = 10}
+library(scales)
+ggplot(LTER_Lake_Nutrients, aes(x = as.POSIXct(sampledate), y = tn_ug, color = lakename)) +
+  geom_point() +
+  scale_color_brewer(palette="Dark2") +
+  xlab("Date (year)") +
+  ylab("Total Nitrogen (\U003BCg/L)") +
+  scale_x_datetime(date_breaks = "1 year", labels = date_format("%Y"))
 
+```
+
+```{r, include=FALSE, fig.height = 4, fig.width = 10}
+ggplot(LTER_Lake_Nutrients, aes(x = as.POSIXct(sampledate), y = tp_ug, color = lakename)) +
+  geom_point() +
+  scale_color_brewer(palette="Accent") +
+  xlab("Date (year)") +
+  ylab("Total Nitrogen (\U003BCg/L)") +
+  scale_x_datetime(date_breaks = "1 year", labels = date_format("%Y"))
+
+```
 
 ### Other options
 What are the chunk options that will suppress the display of errors, warnings, and messages in the final document? 
 
-> ANSWER: 
+> ANSWER: * suppress display of warnings - warnings=FALSE
+* suppress display of messages - messages=FALSE
 
 ### Communicating results
 Write a paragraph describing your findings from the R coding challenge above. This should be geared toward an educated audience but one that is not necessarily familiar with the dataset. Then insert a horizontal rule below the paragraph. Below the horizontal rule, write another paragraph describing the next steps you might take in analyzing this dataset. What questions might you be able to answer, and what analyses would you conduct to answer those questions?
